Began adding support for custom user logins

--- a/templates/login.html
+++ b/templates/login.html
@@ -6,8 +6,8 @@
     </head>
     <body>
         <form action="/" method="POST" enctype="multipart/form-data">
-            <input type="text" placeholder="Enter Name Here">
-            <button>Submit</button>
+            <input type="text" id="enteredUsername" placeholder="Enter Name Here">
+            <input type='submit' value='Submit' onclick='this.form.action="yeet";' />
         </form>
     </body>
 </html>
