--- a/templates/index.html
+++ b/templates/index.html
@@ -2,38 +2,39 @@
   <head>
     <title>File Transfer Server</title>
     <link rel="stylesheet" href='/static/main.css' />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300&display=swap" rel="stylesheet"> 
   </head>
   <body>
-    <div class="container">
-      <div class="row">
-        <div class="col">
-          <form action="/" method="POST" enctype="multipart/form-data">
-            <div class="form-group">
-              <label>Select file</label>
-              <div class="custom-file">
+    <div class="flex-container">
+      <div class="block">
+        <div class="row">
+          <div class="col">
+            <form action="/" method="POST" enctype="multipart/form-data">
+              <div class="form-group">
+                <h1>Select file</h1>
                 <input type="file" class="custom-file-input" name="file" id="file">
-                <label class="custom-file-label" for="file">Select file...</label>
               </div>
-            </div>
-            <button type="submit" class="btn btn-primary">Upload</button>
-          </form>
+              <button type="submit" class="btn btn-primary">Upload</button>
+            </form>
+          </div>
         </div>
       </div>
+      <div class="block">
+        <h1>Stored files:</h1>
+        <ul>
+        {% for file in files %}
+          <li>
+            <a class="filename" href="{{ (request.path + '/' if request.path != '/' else '') + file }}">
+              {{ (request.path + '/' if request.path != '/' else '') + file }}
+            </a>
+            <a class="download-link" href="{{ (request.path + '/' if request.path != '/' else '') + file }}" download><i class="material-icons">download</i></a>
+          </li>
+          {% endfor %}
+        </ul>
+      </div>
     </div>
-    <hr>
-    <h1>Stored files:</h1>
-    <ul>
-    {% for file in files %}
-      <li>
-        <a class="filename" href="{{ (request.path + '/' if request.path != '/' else '') + file }}">
-          {{ (request.path + '/' if request.path != '/' else '') + file }}
-        </a>
-	<a class="download-link" href="{{ (request.path + '/' if request.path != '/' else '') + file }}" download>
-          DOWNLOAD
-
-	</a>
-      </li>
-      {% endfor %}
-    </ul>
   </body>
 </html>
