--- a/static/main.css
+++ b/static/main.css
@@ -70,12 +70,11 @@ button {
 .download-link:hover { color: #458588; }
 .material-icons { font-size: 24px; }
 
-@media (max-width: 1250px){
-    ul {
+@media (max-width: 800px){
+    .flex-container {
         flex-direction: column;
-	    font-size: 24px;
     }
-    ul li {
-        width: 100%;
+    .block {
+        width: 86%;
     }
 }
