--- a/static/main.css
+++ b/static/main.css
@@ -18,14 +18,6 @@ ul li {
     padding: 1px 1px;
     margin: 5px 0%;
 }
-ul li a {
-    display: inline;
-    width: 100%;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    text-decoration: none;
-    white-space: nowrap;
-}
 
 input {
     background-color: #282828;
@@ -59,14 +51,20 @@ button {
 
 .filename {
     color: #458588;
-    font-size-adjust: 0.6;
+    display: inline-block;
+    width: 90%;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    text-decoration: none;
+    word-break:break-all;
 }
 .filename:hover {
     color: #fff;
     background: #939393;
 }
 
-.download-link { color: black; }
+.download-link { color: black; text-align: left;}
 .download-link:hover { color: #458588; }
 .material-icons { font-size: 24px; }
 
