--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
         </div>
       </div>
       <div class="block">
-        <h1>Stored files:</h1>
+        <h1>Stored files</h1>
         <ul>
         {% for file in files %}
           <li>
